--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PASTE | Save your paste here</title>
+    <link rel="shortcut icon" href="/favicon.jpg" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
